Fix sliders for nested loops
SQUASHED: Fix-sliders-for-nested-loops,

--- a/src/components/babylonian-programming-editor/codemirror-inject-styles.css
+++ b/src/components/babylonian-programming-editor/codemirror-inject-styles.css
@@ -69,7 +69,7 @@
 }
 
 .marker.probe, .marker.slider {
-  background-color: hsla(198, 69%, 67%, 0.2);
+  background-color: hsla(198, 69%, 67%, 0.4);
 }
 
 .marker.replacement {
